--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 	<title>최규진's 홈페이지</title>
   </head>
   <body>
+  <!-- Nav -->
+  
+  <!-- Section -->
+
+  <!-- Travel -->
+
+  <!-- Activities -->
+
+  <!-- Coding -->
+
+  <!-- Footer -->
+
 
   </body>
 </html>
