--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html>
   <head>
 	<title>최규진's 홈페이지</title>
+	<style>
+	  .header {
+		width = 100%;
+		height = 100%;
+		position = relative;
+		background: url(bg.jpg) no-repeat center center scroll;
+		background-size : cover;
+	  }
+	  </style>
   </head>
   <body>
   <!-- Nav -->
   
   <!-- Section -->
+  <header class="header">
+	
+  </header>
 
   <!-- Travel -->
 
