--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!Doctype html>
 <html>
   <head>
+	<meta charset="utf-8">
 	<title>최규진's 홈페이지</title>
 	<style>
 	  .header {
 		width = 100%;
-		height = 100%;
-		position = relative;
-		background: url(bg.jpg) no-repeat center center scroll;
+		position: realative;
+		background-image: url("bg.jpg");
+		background-position: center center;
+		background-repeat: no-repeat;
 		background-size : cover;
+		height = 100%;
+	  }
+	  .headerdiv {
+		text-align: center;
+		vertical-align:middle;
+	  }
+	  .headerdiv h1 {
+		margin: 0;
+		padding: 0;
+		font-size: 4.5em;
+		font-weight: 700;
 	  }
 	  </style>
   </head>
@@ -16,8 +29,12 @@
   <!-- Nav -->
   
   <!-- Section -->
-  <header class="header">
-	
+  <header id="top" class="header">
+	<div class="headerdiv">
+	  <h1>최규진의 홈페이지</h1>
+	  <h3>원광대학교 정보통신공학과</h3><br>
+	  <input type="button" vlaue="더 알아보기">
+	</div>
   </header>
 
   <!-- Travel -->
