--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
 	<meta charset="utf-8">
 	<title>최규진's 홈페이지</title>
 	<style>
+	  html, body {
+		width:100%;
+		height:100%;
+	  }
 	  .header {
-		width = 100%;
+		background-size: 100%;
+		width: 100%;
 		position: realative;
 		background-image: url("bg.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
-		background-size : cover;
-		height = 100%;
+		height: 100%;
 	  }
 	  .headerdiv {
 		text-align: center;
-		vertical-align:middle;
+		vertical-align: bottom;
 	  }
 	  .headerdiv h1 {
 		margin: 0;
