--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 		background-repeat: no-repeat;
 		height: 100%;
 	  }
-	  .headerdiv {
+	  .text-vertical-center {
+		display: table-cell;
 		text-align: center;
-		vertical-align: bottom;
+		vertical-align: middle;
 	  }
-	  .headerdiv h1 {
+	  .text-vertical-center h1 {
 		margin: 0;
 		padding: 0;
 		font-size: 4.5em;
@@ -34,10 +35,10 @@
   
   <!-- Section -->
   <header id="top" class="header">
-	<div class="headerdiv">
+	<div class="text-vertical-center">
 	  <h1>최규진의 홈페이지</h1>
 	  <h3>원광대학교 정보통신공학과</h3><br>
-	  <input type="button" vlaue="더 알아보기">
+	  <input type="button" vlaue="더 알아보기">더 알아보기</input>
 	</div>
   </header>
 
