header button 수정

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<div class="text-vertical-center">
 	  <h1>최규진의 홈페이지</h1>
 	  <h3>원광대학교 정보통신공학과</h3><br>
-	  <button class="headerbuston" onclick="location.href='#travel'">더 알아보기</button>
+	  <button class="headerbutton" onclick="location.href='#travel'">더 알아보기</button>
 	</div>
   </header>
 
