--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!-- Travel -->
   <section id="travel">
 	<div class="travel">
-	  <img id="travel1" src="bg.jpg" width="300" height="200" alt="여행1">
+	  <img id="travel1" src="travel1.jpg" width="300" height="200" alt="여행1">
 	</div>
 	</section>
   <!-- Activities -->
