사진들 추가

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 		height: 4em;
 		font-size: 0.8em;
 	  }
-
 	  .headerbutton:hover {
 	  background-color: rgba(0, 0, 0, 0.8);
 	  }
@@ -61,6 +60,13 @@
   <section id="travel">
 	<div class="travel">
 	  <img id="travel1" src="travel1.jpg" width="300" height="200" alt="여행1">
+	  <img id="travel2" src="travel2.jpg" width="300" height="200" alt="여행2">
+	  <img id="travel3" src="travel3.jpg" width="300" height="200" alt="여행3">
+	  <img id="travel4" src="travel4.jpg" width="300" height="200" alt="여행4">
+	  <img id="travel5" src="travel5.jpg" width="300" height="200" alt="여행5">
+	  <img id="travel6" src="travel6.jpg" width="300" height="200" alt="여행6">
+	  <img id="travel7" src="travel7.jpg" width="300" height="200" alt="여행7">
+	  <img id="travel8" src="travel8.jpg" width="300" height="200" alt="여행8">
 	</div>
 	</section>
   <!-- Activities -->
