--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
   <!-- Travel -->
   <section id="travel">
+	<p>여행사진</p>
 	<div class="travel">
 	  <img id="travel1" src="travel1.jpg" width="300" height="200" alt="여행1">
 	  <img id="travel2" src="travel2.jpg" width="300" height="200" alt="여행2">
@@ -70,9 +71,12 @@
 	</div>
 	</section>
   <!-- Activities -->
-
+	<p>대외활동</p>
   <!-- Coding -->
+	<p>프로그래밍 공부</p>
 
+  <!-- foriegn language -->
+	<p>JLPT 준비</p>
   <!-- Footer -->
 
 
