--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		height:100%;
 		font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	  }
+	  .p {
+		font-size: 3em;
+		text-align: center;
+		vertical-align:middle;
+	  }
+
 	  .header {
 		margin: 0px;
 		display: table;
