z인덱스 테스트

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 	  .headerbutton:hover {
 	  background-color: rgba(0, 0, 0, 0.8);
 	  }
+
+	  .travel {
+		position: absolute;
+	  }
+	  #travel1 {z-index: -7; left:10px;}
+	  #travel2 {z-index: -5; left: 20px;}
+	  #travel3 { z-index: -3; left: 30px;}
 	  </style>
   </head>
   <body>
