--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	  }
 
 	  .travel {
-		position: absolute;
+		position: relative;
 	  }
 	  #travel1 {z-index: -7; left:10px;}
 	  #travel2 {z-index: -5; left: 20px;}
