--- a/index.html
+++ b/index.html
@@ -84,12 +84,19 @@
 	</div>
 	</section>
   <!-- Activities -->
+  <section id ="activity">
 	<p>대외활동</p>
+  </section>
   <!-- Coding -->
+  <section id = "coding">
 	<p>프로그래밍 공부</p>
+  </section>
 
   <!-- foriegn language -->
+  <section id = "language">
 	<p>JLPT 준비</p>
+  </section>
+
   <!-- Footer -->
 
 
