--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	  background-color: rgba(0, 0, 0, 0.8);
 	  }
 
-	  .travel {
+	  div {
 		position: relative;
 	  }
 	  #travel1 {z-index: -7; left:250px;}
@@ -60,6 +60,7 @@
 	  #travel6 {z-index: 5; left: 1100px;}
 	  #travel7 {z-index: 7; left: 1250px;}
 	  #travel8 {z-index: 10; left: 1400px;}
+	</style>
   </head>
   <body>
   <!-- Nav -->
