--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 	  div {
 		position: relative;
 	  }
+	  img {
+		position: relative;
+	  }
 	  #travel1 {z-index: -7; left:250px;}
 	  #travel2 {z-index: -5; left: 400px;}
 	  #travel3 {z-index: -3; left: 550px;}
