--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 	  }
 
 	  div {
-		position: relative;
+		position: absolute;
 	  }
 	  img {
-		position: relative;
+		position: absolute;
 	  }
 	  #travel1 {z-index: -7; left:10px;}
 	  #travel2 {z-index: -5; left: 20px;}
