--- a/index.html
+++ b/index.html
@@ -49,20 +49,21 @@
 	  background-color: rgba(0, 0, 0, 0.8);
 	  }
 
-	  div {
+	  .travel {
 		position: absolute;
+		text-align: center;
 	  }
 	  img {
 		position: absolute;
 	  }
 	  #travel1 {z-index: -7; left:10px;}
-	  #travel2 {z-index: -5; left: 20px;}
-	  #travel3 {z-index: -3; left: 30px;}
-	  #travel4 {z-index: -1; left: 40px;}
-	  #travel5 {z-index: 2; left: 50px;}
-	  #travel6 {z-index: 5; left: 60px;}
-	  #travel7 {z-index: 7; left: 70px;}
-	  #travel8 {z-index: 10; left: 80px;}
+	  #travel2 {z-index: -5; left: 200px;}
+	  #travel3 {z-index: -3; left: 300px;}
+	  #travel4 {z-index: -1; left: 400px;}
+	  #travel5 {z-index: 2; left: 500px;}
+	  #travel6 {z-index: 5; left: 600px;}
+	  #travel7 {z-index: 7; left: 700px;}
+	  #travel8 {z-index: 10; left: 800px;}
 	</style>
   </head>
   <body>
