--- a/index.html
+++ b/index.html
@@ -50,20 +50,24 @@
 	  }
 
 	  .travel {
-		position: absolute;
+		position: relative;
 		text-align: center;
 	  }
 	  img {
 		position: absolute;
+		border-radius: 15px;
 	  }
-	  #travel1 {z-index: -7; left:10px;}
-	  #travel2 {z-index: -5; left: 200px;}
-	  #travel3 {z-index: -3; left: 300px;}
-	  #travel4 {z-index: -1; left: 400px;}
-	  #travel5 {z-index: 2; left: 500px;}
-	  #travel6 {z-index: 5; left: 600px;}
-	  #travel7 {z-index: 7; left: 700px;}
-	  #travel8 {z-index: 10; left: 800px;}
+	  #travel1 {z-index: -7; margin-left: 10%;}
+	  #travel2 {z-index: -5; margin-left: 20%;}
+	  #travel3 {z-index: -3; margin-left: 30%;}
+	  #travel4 {z-index: -1; margin-left: 40%;}
+	  #travel5 {z-index: 2; margin-left: 50%;}
+	  #travel6 {z-index: 5; margin-left: 60%;}
+	  #travel7 {z-index: 7; margin-left: 70%;}
+	  #travel8 {z-index: 10; margin-left: 80%;}
+	  img :hover {
+		z-index:15;
+	  }
 	</style>
   </head>
   <body>
@@ -95,7 +99,7 @@
   <!-- Activities -->
   <section id ="activity">
 	<p>대외활동</p>
-  </section>
+  </sect	ion>
   <!-- Coding -->
   <section id = "coding">
 	<p>프로그래밍 공부</p>
