--- a/index.html
+++ b/index.html
@@ -51,23 +51,30 @@
 
 	  .travel {
 		position: relative;
-		text-align: center;
+		width: 100%;
+		height: 300px;
+		margin: 0 auto;
 	  }
 	  img {
 		position: absolute;
 		border-radius: 15px;
 	  }
-	  #travel1 {z-index: -7; margin-left: 10%;}
-	  #travel2 {z-index: -5; margin-left: 20%;}
-	  #travel3 {z-index: -3; margin-left: 30%;}
-	  #travel4 {z-index: -1; margin-left: 40%;}
-	  #travel5 {z-index: 2; margin-left: 50%;}
-	  #travel6 {z-index: 5; margin-left: 60%;}
-	  #travel7 {z-index: 7; margin-left: 70%;}
-	  #travel8 {z-index: 10; margin-left: 80%;}
-	  img :hover {
+	  .travel img :hover {
+	  box-shadow : 1px 1px 1px black,
+				   0 0 10px pink,
+				   0 0 5px magenta;
+	  width: 350px;
+	  height: auto;
 		z-index:15;
 	  }
+	  #travel1 {z-index: -7; margin-left: 5%;}
+	  #travel2 {z-index: -5; margin-left: 15%;}
+	  #travel3 {z-index: -3; margin-left: 25%;}
+	  #travel4 {z-index: -1; margin-left: 35%;}
+	  #travel5 {z-index: 2; margin-left: 45%;}
+	  #travel6 {z-index: 5; margin-left: 55%;}
+	  #travel7 {z-index: 7; margin-left: 65%;}
+	  #travel8 {z-index: 10; margin-left: 75%;}
 	</style>
   </head>
   <body>
