--- a/index.html
+++ b/index.html
@@ -59,22 +59,23 @@
 		position: absolute;
 		border-radius: 15px;
 	  }
-	  .travel img :hover {
+
+	  #travel1 {z-index: 1; margin-left: 5%;}
+	  #travel2 {z-index: 2; margin-left: 15%;}
+	  #travel3 {z-index: 3; margin-left: 25%;}
+	  #travel4 {z-index: 4; margin-left: 35%;}
+	  #travel5 {z-index: 5; margin-left: 45%;}
+	  #travel6 {z-index: 6; margin-left: 55%;}
+	  #travel7 {z-index: 7; margin-left: 65%;}
+	  #travel8 {z-index: 8; margin-left: 75%;}
+	  a :hover {
 	  box-shadow : 1px 1px 1px black,
 				   0 0 10px pink,
 				   0 0 5px magenta;
-	  width: 350px;
-	  height: auto;
-		z-index:15;
+		z-index: 15 !important;
+	    width: 350px;
+	   height: auto;
 	  }
-	  #travel1 {z-index: -7; margin-left: 5%;}
-	  #travel2 {z-index: -5; margin-left: 15%;}
-	  #travel3 {z-index: -3; margin-left: 25%;}
-	  #travel4 {z-index: -1; margin-left: 35%;}
-	  #travel5 {z-index: 2; margin-left: 45%;}
-	  #travel6 {z-index: 5; margin-left: 55%;}
-	  #travel7 {z-index: 7; margin-left: 65%;}
-	  #travel8 {z-index: 10; margin-left: 75%;}
 	</style>
   </head>
   <body>
@@ -93,14 +94,14 @@
   <section id="travel">
 	<p>여행사진</p>
 	<div class="travel">
-	  <img id="travel1" src="travel1.jpg" width="300" height="200" alt="여행1">
-	  <img id="travel2" src="travel2.jpg" width="300" height="200" alt="여행2">
-	  <img id="travel3" src="travel3.jpg" width="300" height="200" alt="여행3">
-	  <img id="travel4" src="travel4.jpg" width="300" height="200" alt="여행4">
-	  <img id="travel5" src="travel5.jpg" width="300" height="200" alt="여행5">
-	  <img id="travel6" src="travel6.jpg" width="300" height="200" alt="여행6">
-	  <img id="travel7" src="travel7.jpg" width="300" height="200" alt="여행7">
-	  <img id="travel8" src="travel8.jpg" width="300" height="200" alt="여행8">
+	  <a href="https://instagram.com/kyujin96"><img id="travel1" src="travel1.jpg" width="300" height="200" alt="여행1"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel2" src="travel2.jpg" width="300" height="200" alt="여행2"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel3" src="travel3.jpg" width="300" height="200" alt="여행3"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel4" src="travel4.jpg" width="300" height="200" alt="여행4"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel5" src="travel5.jpg" width="300" height="200" alt="여행5"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel6" src="travel6.jpg" width="300" height="200" alt="여행6"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel7" src="travel7.jpg" width="300" height="200" alt="여행7"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel8" src="travel8.jpg" width="300" height="200" alt="여행8"></a>
 	</div>
 	</section>
   <!-- Activities -->
