--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	  html, body {
 		margin: 0px;
 		width:100%;
-		height:100%;
 		font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	  }
 	  p {
@@ -48,7 +47,9 @@
 	  .headerbutton:hover {
 	  background-color: rgba(0, 0, 0, 0.8);
 	  }
-
+	  #travel {
+		background-color: #6ABBFF;
+	  }
 	  .travel {
 		position: relative;
 		width: 100%;
