--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		margin: 0 auto;
 		padding-top: 100px;
 	  }
-	  img {
+	  .travel img {
 		position: absolute;
 		border-radius: 15px;
 	  }
@@ -89,6 +89,21 @@
 		height: 400px;
 		padding-top: 100px;
 	  }
+	  .activities {
+		width: 90%;
+		margin: 0 auto;
+	  }
+	  th img {
+		width: 300px;
+		height: auto;
+		border-radius: 15px;
+	  }
+	  td {
+		height: 1.5em;
+		text-align: center;
+	  }
+	  td h3 {
+		font-family: "Arial", Helvetica;
 
 
 	</style>
@@ -121,9 +136,16 @@
 	</section>
   <!-- Activities -->
   <section id ="activity">
-	<p>대외활동</p>
+	<p><br>대외활동<br></p>
 	<div class="activity">
+	  <table class "activities">
+	  <tr><th><img src="travel1.jpg"></th><th><img src="travel2.jpg"></th><th><img src="travel3.jpg"></th><th><img src="travel4.jpg"></th></tr>
+		<tr><td><h3>멋쟁이 사자처럼</h3></td><td><h3>삼성증권 YAHO봉사단</h3></td><td><h3>프로보노 멘토링</h3></td><td><h3>코딩 교육봉사</h3></td></tr>
+		<tr><td>2016. 04 ~ 11</td><td>2019. 03 ~ 11</td><td>2016. 07 ~ 12</td><td>2016. 09 ~ 12</td></tr>
 	  
+	  <!-- 표 셀 하나로 통합해서 사진 밑에 활동명 밑에 기간입력 후 후버로 테두리효과 -->
+	  
+	  </table>
 	</div>
   </section>
   <!-- Coding -->
