--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
 	  <div class="activity-center">
 		<img src="travel4.jpg"><br><br><h3>코딩 교육봉사</h3><br>2016. 09 ~ 12
 	  </div>
+
+		<!-- 각 div 20퍼씩 주고 양옆에 2퍼씩 외부마진주기 -->
+
 	</div>
   </section>
   <!-- Coding -->
