사진 폴더화

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		display: table;
 		background-size: 100%;
 		width: 100%;
-		background-image: url("bg.jpg");
+		background-image: url("public/bg.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
 		height: 100%;
@@ -128,14 +128,14 @@
   <section id="travel">
 	<p><br>여행사진<br></p>
 	<div class="travel">
-	  <a href="https://instagram.com/kyujin96"><img id="travel1" src="travel1.jpg" width="300" height="200" alt="여행1"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel2" src="travel2.jpg" width="300" height="200" alt="여행2"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel3" src="travel3.jpg" width="300" height="200" alt="여행3"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel4" src="travel4.jpg" width="300" height="200" alt="여행4"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel5" src="travel5.jpg" width="300" height="200" alt="여행5"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel6" src="travel6.jpg" width="300" height="200" alt="여행6"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel7" src="travel7.jpg" width="300" height="200" alt="여행7"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel8" src="travel8.jpg" width="300" height="200" alt="여행8"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel1" src="public/travel1.jpg" width="300" height="200" alt="여행1"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel2" src="public/travel2.jpg" width="300" height="200" alt="여행2"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel3" src="public/travel3.jpg" width="300" height="200" alt="여행3"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel4" src="public/travel4.jpg" width="300" height="200" alt="여행4"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel5" src="public/travel5.jpg" width="300" height="200" alt="여행5"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel6" src="public/travel6.jpg" width="300" height="200" alt="여행6"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel7" src="public/travel7.jpg" width="300" height="200" alt="여행7"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel8" src="public/travel8.jpg" width="300" height="200" alt="여행8"></a>
 	</div>
 	</section>
   <!-- Activities -->
@@ -143,16 +143,16 @@
 	<p><br>대외활동<br></p>
 	<div class="activity">
 	  <div class="activity-center">
-		<img src="travel1.jpg"><br><br><h3>멋쟁이 사자처럼</h3><br>2016. 04 ~ 11
+		<img src="public/likelion.jpg"><br><br><h3>멋쟁이 사자처럼</h3><br>2016. 04 ~ 11
 	  </div>
 	  <div class="activity-center">
-		<img src="travel2.jpg"><br><br><h3>삼성증권 YAHO 봉사단</h3><br>2019. 03 ~ 11
+		<img src="public/YAHO.jpg"><br><br><h3>삼성증권 YAHO 봉사단</h3><br>2019. 03 ~ 11
 	  </div>
 	  <div class="activity-center">
-		<img src="travel3.jpg"><br><br><h3>프로보노 멘토링</h3><br>2016. 07 ~ 12
+		<img src="public/onemorething.jpg"><br><br><h3>프로보노 멘토링</h3><br>2016. 07 ~ 12
 	  </div>
 	  <div class="activity-center">
-		<img src="travel4.jpg"><br><br><h3>코딩 교육봉사</h3><br>2016. 09 ~ 12
+		<img src="public/연곡분교.jpg"><br><br><h3>코딩 교육봉사</h3><br>2016. 09 ~ 12
 	  </div>
 
 		<!-- 각 div 20퍼씩 주고 양옆에 2퍼씩 외부마진주기 -->
