travel 변경 및 activity 가운데정렬&hover

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		font-size: 3em;
 		text-align: center;
 		vertical-align:middle;
+		margin: 0;
 	  }
 
 	  .header {
@@ -51,9 +52,6 @@
 	  #travel {
 		background-color: #6ABBFF;
 	  }
-	  p {
-		margin: 0;
-	  }
 	  .travel {
 		position: relative;
 		width: 100%;
@@ -63,6 +61,8 @@
 	  }
 	  .travel img {
 		position: absolute;
+		width: 20%;
+		height: auto;
 		border-radius: 15px;
 	  }
 
@@ -74,12 +74,13 @@
 	  #travel6 {z-index: 6; margin-left: 55%;}
 	  #travel7 {z-index: 7; margin-left: 65%;}
 	  #travel8 {z-index: 8; margin-left: 75%;}
-	  a :hover {
+	 
+	  .travel a :hover {
 	  box-shadow : 1px 1px 1px black,
 				   0 0 10px pink,
 				   0 0 5px magenta;
 		z-index: 15 !important;
-	    width: 350px;
+	    width: 25%;
 	   height: auto;
 	  }
 
@@ -89,25 +90,32 @@
 		height: 400px;
 		padding-top: 100px;
 	  }
+	  #first{
+		margin-left: 4%;
+	  }
+
 	  .activity-center {
 		float: left;
 		width: 23%;
 		height: 300px;
+		text-align: center;
 	  }
 	  .activity-center img {
-		width: 250px;
+		width: 90%;
 		height: auto;
 		border-radius: 15px;
+		margin: 0 auto;
+	 } 
+	 .activity-center:hover img {
+		box-shadow : 1px 1px 1px black,
+					 0 0 10px pink,
+					 0 0 5px magenta;
 	  }
 	  .activity-center h3 {
 		font-family: "Helvetica";
 		height: 0.7em;
 		margin-bottom: 0px;
-	  }
-	  .activity-center :hover {
-		box-shadow : 1px 1px 1px black,
-					 0 0 10px pink,
-					 0 0 5px magenta;
+		text-decoration: none;
 	  }
 
 	</style>
@@ -115,7 +123,7 @@
   <body>
   <!-- Nav -->
   
-  <!-- Section -->
+  <!-- Header -->
   <header id="top" class="header">
 	<div class="text-vertical-center">
 	  <h1>최규진의 홈페이지</h1>
@@ -124,25 +132,28 @@
 	</div>
   </header>
 
+
   <!-- Travel -->
   <section id="travel">
 	<p><br>여행사진<br></p>
 	<div class="travel">
-	  <a href="https://instagram.com/kyujin96"><img id="travel1" src="public/travel1.jpg" width="300" height="200" alt="여행1"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel2" src="public/travel2.jpg" width="300" height="200" alt="여행2"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel3" src="public/travel3.jpg" width="300" height="200" alt="여행3"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel4" src="public/travel4.jpg" width="300" height="200" alt="여행4"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel5" src="public/travel5.jpg" width="300" height="200" alt="여행5"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel6" src="public/travel6.jpg" width="300" height="200" alt="여행6"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel7" src="public/travel7.jpg" width="300" height="200" alt="여행7"></a>
-	  <a href="https://instagram.com/kyujin96"><img id="travel8" src="public/travel8.jpg" width="300" height="200" alt="여행8"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel1" src="public/travel1.jpg" alt="여행1"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel2" src="public/travel2.jpg" alt="여행2"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel3" src="public/travel3.jpg" alt="여행3"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel4" src="public/travel4.jpg" alt="여행4"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel5" src="public/travel5.jpg" alt="여행5"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel6" src="public/travel6.jpg" alt="여행6"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel7" src="public/travel7.jpg" alt="여행7"></a>
+	  <a href="https://instagram.com/kyujin96"><img id="travel8" src="public/travel8.jpg" alt="여행8"></a>
 	</div>
 	</section>
+
+
   <!-- Activities -->
   <section id ="activity">
 	<p><br>대외활동<br></p>
 	<div class="activity">
-	  <div class="activity-center">
+	  <div id = "first" class="activity-center">
 		<img src="public/likelion.jpg"><br><br><h3>멋쟁이 사자처럼</h3><br>2016. 04 ~ 11
 	  </div>
 	  <div class="activity-center">
@@ -154,15 +165,15 @@
 	  <div class="activity-center">
 		<img src="public/연곡분교.jpg"><br><br><h3>코딩 교육봉사</h3><br>2016. 09 ~ 12
 	  </div>
-
-		<!-- 각 div 20퍼씩 주고 양옆에 2퍼씩 외부마진주기 -->
-
 	</div>
   </section>
+
+
   <!-- Coding -->
   <section id = "coding">
 	<p>프로그래밍 공부</p>
   </section>
+
 
   <!-- foriegn language -->
   <section id = "language">
