--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		<img src="public/onemorething.jpg"><br><br><h3>프로보노 멘토링</h3><br>2016. 07 ~ 12
 	  </div>
 	  <div class="activity-center">
-		<img src="public/연곡분교.jpg"><br><br><h3>코딩 교육봉사</h3><br>2016. 09 ~ 12
+		<img src="public/school.jpg"><br><br><h3>코딩 교육봉사</h3><br>2016. 09 ~ 12
 	  </div>
 	</div>
   </section>
