--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
 		text-decoration: none;
 	  }
 
+	  .coding {
+		margin: 0 auto;
+		width: 100%;
+		height: 400px;
+		padding-top: 100px;
+	  }
 	</style>
   </head>
   <body>
@@ -171,7 +177,10 @@
 
   <!-- Coding -->
   <section id = "coding">
-	<p>프로그래밍 공부</p>
+	<p>프로그래밍</p>
+	<div class="coding">
+	  <!-- C++, HTML, Ruby -->
+	</div>
   </section>
 
 
