--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		height: 400px;
 		padding-top: 100px;
 	  }
-	  #first{
+	  #actfirst{
 		margin-left: 4%;
 	  }
 
@@ -123,6 +123,26 @@
 		width: 100%;
 		height: 400px;
 		padding-top: 100px;
+	  }
+	  #codefirst {
+		margin-left: 10%;
+	  }
+	  .coding-center {
+		float: left;
+		width: 20%;
+		height: 250px;
+		text-align: center;
+	  }
+	  .coding-center img {
+		width: 90%;
+		height : auto;
+		margin: 0 auto;
+		border-radius: 50px;
+	  }
+	 .coding-center:hover img {
+		box-shadow : 1px 1px 1px black,
+					 0 0 5px black,
+					 0 0 10px black;
 	  }
 	</style>
   </head>
@@ -159,7 +179,7 @@
   <section id ="activity">
 	<p><br>대외활동<br></p>
 	<div class="activity">
-	  <div id = "first" class="activity-center">
+	  <div id = "actfirst" class="activity-center">
 		<img src="public/likelion.jpg"><br><br><h3>멋쟁이 사자처럼</h3><br>2016. 04 ~ 11
 	  </div>
 	  <div class="activity-center">
@@ -179,7 +199,18 @@
   <section id = "coding">
 	<p>프로그래밍</p>
 	<div class="coding">
-	  <!-- C++, HTML, Ruby -->
+	  <div id="codefirst" class="coding-center">
+		<a href="/public/cpp.html"><img src="public/cpp.png"></a><br><br><h3>C++</h3>
+	  </div>
+	  <div class="coding-center">
+		<img src="public/ruby.png"><br><br><h3>Ruby on Rails</h3>
+	  </div>
+	  <div class="coding-center">
+		<img src="public/java.png"><br><br><h3>Java</h3>
+	  </div>
+	  <div class="coding-center">
+		<img src="public/html5.png"><br><br><h3>HTML5 & CSS3</h3>
+	  </div>
 	</div>
   </section>
 
