링크테스트

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 	<p>프로그래밍</p>
 	<div class="coding">
 	  <div id="codefirst" class="coding-center">
-		<a href="/public/cpp.html"><img src="public/cpp.png"></a><br><br><h3>C++</h3>
+		<a href="cpp.html"><img src="public/cpp.png"></a><br><br><h3>C++</h3>
 	  </div>
 	  <div class="coding-center">
 		<img src="public/ruby.png"><br><br><h3>Ruby on Rails</h3>
