--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
 		<a href="cpp.html"><img src="public/cpp.png"></a><br><br><h3>C++</h3>
 	  </div>
 	  <div class="coding-center">
-		<img src="public/ruby.png"><br><br><h3>Ruby on Rails</h3>
+		<a href="ruby.html"><img src="public/ruby.png"></a><br><br><h3>Ruby on Rails</h3>
 	  </div>
 	  <div class="coding-center">
-		<img src="public/java.png"><br><br><h3>Java</h3>
+		<a href="java.html"><img src="public/java.png"></a><br><br><h3>Java</h3>
 	  </div>
 	  <div class="coding-center">
-		<img src="public/html5.png"><br><br><h3>HTML5 & CSS3</h3>
+		<a href="html.html"><img src="public/html5.png"></a><br><br><h3>HTML5 & CSS3</h3>
 	  </div>
 	</div>
   </section>
