--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
 		text-decoration: none;
 	  }
 
+	  #coding {
+		background-color: #353535;
+		color: white;
+	  }
 	  .coding {
 		margin: 0 auto;
 		width: 100%;
@@ -140,9 +144,9 @@
 		border-radius: 50px;
 	  }
 	 .coding-center:hover img {
-		box-shadow : 1px 1px 1px black,
-					 0 0 5px black,
-					 0 0 10px black;
+		box-shadow : 3px 3px 3px white,
+					 0 0 30px white,
+					 0 0 15px white;
 	  }
 	</style>
   </head>
@@ -197,7 +201,7 @@
 
   <!-- Coding -->
   <section id = "coding">
-	<p>프로그래밍</p>
+	<p><br>프로그래밍</p>
 	<div class="coding">
 	  <div id="codefirst" class="coding-center">
 		<a href="cpp.html"><img src="public/cpp.png"></a><br><br><h3>C++</h3>
@@ -217,7 +221,10 @@
 
   <!-- foriegn language -->
   <section id = "language">
-	<p>JLPT 준비</p>
+	<p><br>JLPT 준비<br></p>
+	<div class="jlpt">
+	  <div id="jlptfirst" class="jlpt-center">
+		<a href="alphabet.html">
   </section>
 
   <!-- Footer -->
