bottom padding 추가

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 		width: 100%;
 		height: 400px;
 		padding-top: 100px;
+		padding-bottom: 50px;
 	  }
 	  #actfirst{
 		margin-left: 4%;
@@ -127,6 +128,7 @@
 		width: 100%;
 		height: 400px;
 		padding-top: 100px;
+		padding-bottom: 50px;
 	  }
 	  #codefirst {
 		margin-left: 10%;
