--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		width: 100%;
 		height: 400px;
 		padding-top: 100px;
-		padding-bottom: 50px;
+		padding-bottom: 100px;
 	  }
 	  #actfirst{
 		margin-left: 4%;
@@ -226,7 +226,18 @@
 	<p><br>JLPT 준비<br></p>
 	<div class="jlpt">
 	  <div id="jlptfirst" class="jlpt-center">
-		<a href="alphabet.html">
+		<a href="alphabet.html"><img src="public/kana.png"></a><br><br>단어장
+	  </div>
+	  <div class="jlpt-center">
+		<a href="word.html"><img src="public/word.png"></a><br><br>단어장
+	  </div>
+	  <div class="jlpt-center">
+		<a href="video.html"><img src="public/video.png"></a><br><br>영화
+	  </div>
+	  <div class="jlpt-center">
+		<a href="www.jlpt.or.kr/index.html"><img src="public/jlpt.png></a><br><br>JLPT 홈페이지
+	  </div>
+	</div>
   </section>
 
   <!-- Footer -->
