--- a/index.html
+++ b/index.html
@@ -150,6 +150,35 @@
 					 0 0 30px white,
 					 0 0 15px white;
 	  }
+	
+		
+	.jlpt {
+		margin: 0 auto;
+		width: 100%;
+		height: 400px;
+		padding-top: 100px;
+		padding-bottom: 50px;
+	  }
+	  #jlptfirst {
+		margin-left: 10%;
+	  }
+	  .jlpt-center {
+		float: left;
+		width: 20%;
+		height: 250px;
+		text-align: center;
+	  }
+	  .jlpt-center img {
+		width: 90%;
+		height : auto;
+		margin: 0 auto;
+		border-radius: 50px;
+	  }
+	 .jlpt-center:hover img {
+		box-shadow : 3px 3px 3px white,
+					 0 0 30px white,
+					 0 0 15px white;
+	  }
 	</style>
   </head>
   <body>
