--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
 		padding-bottom: 50px;
 	  }
 	  #jlptfirst {
-		margin-left: 10%;
+		margin-left: 5%;
 	  }
 	  .jlpt-center {
 		float: left;
-		width: 20%;
+		width: 22.5%;
 		height: 250px;
 		text-align: center;
 	  }
@@ -175,9 +175,28 @@
 		border-radius: 50px;
 	  }
 	 .jlpt-center:hover img {
-		box-shadow : 3px 3px 3px white,
-					 0 0 30px white,
-					 0 0 15px white;
+		box-shadow : 1px 1px 1px black,
+					 0 0 15px black,
+					 0 0 10px black;
+	  }
+
+	  .footer {
+		padding-right:15px;
+		padding-left:15px;
+		margin-right: auto;
+		margin-left: auto;
+	  }
+	  .footer-center {
+		margin: 0 auto;
+		text-align: center;
+	  }
+	  .footer-center img {
+		width: 40px;
+		height: auto;
+	  }
+	  .text-muted {
+		font-size: 1.5em;
+		color: #777;
 	  }
 	</style>
   </head>
@@ -255,22 +274,37 @@
 	<p><br>JLPT 준비<br></p>
 	<div class="jlpt">
 	  <div id="jlptfirst" class="jlpt-center">
-		<a href="alphabet.html"><img src="public/kana.png"></a><br><br>단어장
+		<a href="alphabet.html"><img src="public/kana.png"></a><br><br><br><h1>가나</h1>
 	  </div>
 	  <div class="jlpt-center">
-		<a href="word.html"><img src="public/word.png"></a><br><br>단어장
+		<a href="word.html"><img src="public/word.png"></a><br><br><br><h1>단어장</h1>
 	  </div>
 	  <div class="jlpt-center">
-		<a href="video.html"><img src="public/video.png"></a><br><br>영화
+		<a href="video.html"><img src="public/video.png"></a><br><br><br><h1>영화</h1>
 	  </div>
 	  <div class="jlpt-center">
-		<a href="www.jlpt.or.kr/index.html"><img src="public/jlpt.png></a><br><br>JLPT 홈페이지
+		<a href="www.jlpt.or.kr/index.html"><img src="public/jlpt.png"></a><br><br><br><h1>JLPT 홈페이지</h1>
 	  </div>
 	</div>
   </section>
 
   <!-- Footer -->
-
+  <footer>
+	<div class="footer">
+	<hr>
+	  <div class="footer-center">
+		<h2><strong>최규진</strong></h2>
+		<h5>경기도 평택시 장안동<br>전라북도 익산시 신동</h5><br>
+		  (+82) 10-3131-xxxx<br>
+		  <a href="mailto:musiclace@naver.com">musiclace@naver.com</a>
+		  <br><br><br>
+		  <a href="fb.com/kyujin96"><img src="public/fb.png"></a>
+		  <a href="instagram.com/kyujin96"><img src="public/insta.png"></a>
+		  <a href="github.com/likelion-wku2831"><img src="public/github.png"></a><br>
+		<p class="text-muted"> Copyright &copy; My Website 2019</p>
+	  </div>
+	</div>
+  </footer>
 
   </body>
 </html>
