--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 		<a href="video.html"><img src="public/video.png"></a><br><br><br><h1>영화</h1>
 	  </div>
 	  <div class="jlpt-center">
-		<a href="www.jlpt.or.kr/index.html"><img src="public/jlpt.png"></a><br><br><br><h1>JLPT 홈페이지</h1>
+		<a href="https://www.jlpt.or.kr/index.html"><img src="public/jlpt.png"></a><br><br><br><h1>JLPT 홈페이지</h1>
 	  </div>
 	</div>
   </section>
