--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
 		  (+82) 10-3131-xxxx<br>
 		  <a href="mailto:musiclace@naver.com">musiclace@naver.com</a>
 		  <br><br><br>
-		  <a href="fb.com/kyujin96"><img src="public/fb.png"></a>
-		  <a href="instagram.com/kyujin96"><img src="public/insta.png"></a>
-		  <a href="github.com/likelion-wku2831"><img src="public/github.png"></a><br>
+		  <a href="https://fb.com/kyujin96"><img src="public/fb.png"></a>
+		  <a href="https://instagram.com/kyujin96"><img src="public/insta.png"></a>
+		  <a href="https://github.com/likelion-wku2831"><img src="public/github.png"></a><br>
 		<p class="text-muted"> Copyright &copy; My Website 2019</p>
 	  </div>
 	</div>
