--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
 					 0 0 15px white;
 	  }
 	
-		
+	#language {
+	  height: 90%;
+	}
 	.jlpt {
 		margin: 0 auto;
 		width: 100%;
@@ -165,7 +167,6 @@
 	  .jlpt-center {
 		float: left;
 		width: 22.5%;
-		height: 250px;
 		text-align: center;
 	  }
 	  .jlpt-center img {
@@ -193,6 +194,9 @@
 	  .footer-center img {
 		width: 40px;
 		height: auto;
+	  }
+	  .footer-center a {
+		text-decoration: none;
 	  }
 	  .text-muted {
 		font-size: 1.5em;
