--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 	  }
 	  #travel {
 		background-color: #6ABBFF;
+		height: 70%;
 	  }
 	  .travel {
 		position: relative;
 		width: 100%;
-		height: 300px;
 		margin: 0 auto;
 		padding-top: 100px;
 	  }
@@ -87,7 +87,7 @@
 	  .activity {
 		margin: 0 auto;
 		width: 100%;
-		height: 400px;
+		height: 70%;
 		padding-top: 100px;
 		padding-bottom: 100px;
 	  }
@@ -126,7 +126,7 @@
 	  .coding {
 		margin: 0 auto;
 		width: 100%;
-		height: 400px;
+		height: 65%;
 		padding-top: 100px;
 		padding-bottom: 50px;
 	  }
