--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 	  }
 	  #travel {
 		background-color: #6ABBFF;
+		height: 70%;
 		
 	  }
 	  .travel {
 		position: relative;
 		width: 100%;
-		height: 70%;
 		margin: 0 auto;
 		padding-top: 100px;
 		padding-bottom: 150px;
@@ -85,7 +85,10 @@
 	    width: 25%;
 	   height: auto;
 	  }
-
+	  
+	  #activity {
+	    height: 70%;
+	  }
 	  .activity {
 		margin: 0 auto;
 		width: 100%;
@@ -99,7 +102,6 @@
 	  .activity-center {
 		float: left;
 		width: 23%;
-		height: 70%;
 		text-align: center;
 	  }
 	  .activity-center img {
@@ -123,6 +125,7 @@
 	  #coding {
 		background-color: #353535;
 		color: white;
+		height: 70%;
 	  }
 	  .coding {
 		margin: 0 auto;
@@ -136,7 +139,6 @@
 	  .coding-center {
 		float: left;
 		width: 20%;
-		height: 70%;
 		text-align: center;
 	  }
 	  .coding-center img {
@@ -166,7 +168,6 @@
 	  .jlpt-center {
 		float: left;
 		width: 22.5%;
-		  height: 70%;
 		text-align: center;
 	  }
 	  .jlpt-center img {
