--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 		display: table-cell;
 		text-align: center;
 		vertical-align: middle;
+		padding-left: 40%;
+		padding-bottom: 5%;
+
 	  }
 	  .text-vertical-center h1 {
 		margin: 0;
