--- a/index.html
+++ b/index.html
@@ -242,16 +242,16 @@
 	<p><br>대외활동<br></p>
 	<div class="activity">
 	  <div id = "actfirst" class="activity-center">
-		<img src="public/likelion.jpg"><br><br><h3>멋쟁이 사자처럼</h3><br>2016. 04 ~ 11
+		<a href="https://likelion.net"><img src="public/likelion.jpg"></a><br><br><h3>멋쟁이 사자처럼</h3><br>2016. 04 ~ 11
 	  </div>
 	  <div class="activity-center">
-		<img src="public/YAHO.jpg"><br><br><h3>삼성증권 YAHO 봉사단</h3><br>2019. 03 ~ 11
+		<a href="https://www.samsungyaho.kr"><img src="public/YAHO.jpg"></a><br><br><h3>삼성증권 YAHO 봉사단</h3><br>2019. 03 ~ 11
 	  </div>
 	  <div class="activity-center">
-		<img src="public/onemorething.jpg"><br><br><h3>프로보노 멘토링</h3><br>2016. 07 ~ 12
+		<a href="https://www.hanium.or.kr/portal/index.do"><img src="public/onemorething.jpg"></a><br><br><h3>프로보노 멘토링</h3><br>2016. 07 ~ 12
 	  </div>
 	  <div class="activity-center">
-		<img src="public/school.jpg"><br><br><h3>코딩 교육봉사</h3><br>2016. 09 ~ 12
+		<a href="https://likelion.net"><img src="public/school.jpg"></a><br><br><h3>코딩 교육봉사</h3><br>2016. 09 ~ 12
 	  </div>
 	</div>
   </section>
@@ -300,7 +300,7 @@
   <footer>
 	<div class="footer">
 	  <div class="footer-center">
-	<hr>
+	  <hr>
 		<h2><strong>최규진</strong></h2>
 		  (+82) 10-3131-xxxx<br>
 		  <a href="mailto:musiclace@naver.com">musiclace@naver.com</a>
@@ -313,5 +313,4 @@
 	</div>
   </footer>
 
-  </body>
-</html>
+  </body></html>
