YAHO 홈페이지 연결 수정

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 		<a href="https://likelion.net"><img src="public/likelion.jpg"></a><br><br><h3>멋쟁이 사자처럼</h3><br>2016. 04 ~ 11
 	  </div>
 	  <div class="activity-center">
-		<a href="https://www.samsungyaho.kr"><img src="public/YAHO.jpg"></a><br><br><h3>삼성증권 YAHO 봉사단</h3><br>2019. 03 ~ 11
+		<a href="http://www.samsungyaho.kr"><img src="public/YAHO.jpg"></a><br><br><h3>삼성증권 YAHO 봉사단</h3><br>2019. 03 ~ 11
 	  </div>
 	  <div class="activity-center">
 		<a href="https://www.hanium.or.kr/portal/index.do"><img src="public/onemorething.jpg"></a><br><br><h3>프로보노 멘토링</h3><br>2016. 07 ~ 12
