--- a/cpp.html
+++ b/cpp.html
@@ -3,10 +3,81 @@
   <head>
 	<meta charset="utf-8">
 	<title> C++ </title>
+	<style>
+	html, body {
+	  margin: 0px;
+	  width: 100%;
+	  height: 100%;
+	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	}
+	a:link {
+	  color: black;
+	  text-decoration: none;
+	}
+	a:visited {
+	  color: black;
+	  text-decoration: none;
+	}
+	.header {
+	  margin: 0px;
+	  display: table;
+	  width: 100%;
+	  height: 15%;
+	  background-size: 100%;
+	}
+	.header-main p {
+	  margin-left: 10%;
+	  font-size: 5em;
+	  vertical-align: middle;
+	}
+	
+	.nav {
+	  font-size: 1.5em;
+	  text-align: right;
+	}
+	#main p {
+	  font-size: 3em;
+	  text-align: left;
+	  vertical-align: middle;
+	  margin-left: 10%;
+	}
+	#first {
+	  margin-left: 15%;
+	}
+	.object {
+	  float: left;
+	  width: 15%;
+	  height: 15%;
+	  text-align: center;
+	  vertical-align: middle;
+	}
+	</style>
   </head>
   <body>
-	C++페이지 상단에 메인포함한 네비게이션
-	<hr>
-	바닥에 footer잊지 말것
+	<header class="header">
+	  <div class="header-main">
+		<nav class="nav">
+		  <a href="index.html">메인페이지&nbsp;&nbsp;</a>
+		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
+		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
+		  <a href="html.html">HTML & CSS</a>
+		</nav>
+		<p><strong>C++</strong></p>
+	  </div>
+	</header>
+	
+	<!-- main section -->
+	<section id="main">
+	  <p><br>목록</p>
+	  <div class="main">
+		<div id="first" class="object">
+		  <a href="cpp1.html">C언어 기초</a>
+		</div>
+		<div class="object">
+		  <a href="cpp2.html">C언어 기초 문법</a>
+		</div>
+		<div class="object">
+		  <a href="cpp3.html">C언어 프로젝트 예제</a>
+		</div>
   </body>
 </html>
