--- a/cpp.html
+++ b/cpp.html
@@ -11,29 +11,41 @@
 	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	}
 	a:link {
-	  color: black;
+	  color: white;
 	  text-decoration: none;
 	}
 	a:visited {
-	  color: black;
+	  color: white;
 	  text-decoration: none;
+	}
+	a:hover {
+	  text-decoration: underline;
 	}
 	.header {
 	  margin: 0px;
 	  display: table;
 	  width: 100%;
-	  height: 15%;
+	  height: 10%;
+	  background-color: #353535;
 	  background-size: 100%;
 	}
-	.header-main p {
+	.header-main h1 {
+	  color: white;
 	  margin-left: 10%;
 	  font-size: 5em;
 	  vertical-align: middle;
 	}
 	
 	.nav {
+	  margin-top: 0.5em;
+	  margin-right: 2em;
 	  font-size: 1.5em;
 	  text-align: right;
+	}
+	.main {
+	  width: 80%;
+	  height: 60%;
+	  margin-left: 15%;
 	}
 	#main p {
 	  font-size: 3em;
@@ -41,15 +53,20 @@
 	  vertical-align: middle;
 	  margin-left: 10%;
 	}
-	#first {
-	  margin-left: 15%;
-	}
 	.object {
 	  float: left;
-	  width: 15%;
-	  height: 15%;
+	  width: 200px;
+	  height: 150px;
 	  text-align: center;
 	  vertical-align: middle;
+	}
+	.object a:link {
+	  color: black;
+	  text-decoration: none;
+	}
+	.object a:visited {
+	  color: black;
+	  text-decoration: none;
 	}
 	</style>
   </head>
@@ -57,27 +74,36 @@
 	<header class="header">
 	  <div class="header-main">
 		<nav class="nav">
-		  <a href="index.html">메인페이지&nbsp;&nbsp;</a>
+		  <br><a href="index.html">메인페이지&nbsp;&nbsp;</a>
 		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
 		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
 		  <a href="html.html">HTML & CSS</a>
 		</nav>
-		<p><strong>C++</strong></p>
+		<h1><strong>C++</strong></h1>
 	  </div>
 	</header>
 	
 	<!-- main section -->
 	<section id="main">
-	  <p><br>목록</p>
+	  <p>목록</p>
 	  <div class="main">
-		<div id="first" class="object">
-		  <a href="cpp1.html">C언어 기초</a>
+		<div class="object">
+		  <a href="cpp1.html">C언어 입문</a>
 		</div>
 		<div class="object">
-		  <a href="cpp2.html">C언어 기초 문법</a>
+		  <a href="cpp2.html">C언어 기초</a>
 		</div>
 		<div class="object">
-		  <a href="cpp3.html">C언어 프로젝트 예제</a>
+		  <a href="cpp3.html">C언어 문법1</a>
+		</div>
+		<div class="object">
+		  <a href="cpp4.html">C언어 문법2</a>
+		</div>
+		<div class="object">
+		  <a href="cpp5.html">C언어 문법3</a>
+		</div>
+		<div class="object">
+		  <a href="cpp6.html">C언어 예제</a>
 		</div>
   </body>
 </html>
