--- a/cpp.html
+++ b/cpp.html
@@ -68,6 +68,27 @@
 	  color: black;
 	  text-decoration: none;
 	}
+	.footer {
+		padding-right:15px;
+		padding-left:15px;
+		margin-right: auto;
+		margin-left: auto;
+	 }
+	 .footer-center {
+	   margin: 0 auto;
+	   text-align: center;
+	 }
+	 .footer-center img {
+	   width: 40px;
+	   height: auto;
+	 }
+	 .footer-center a {
+	   text-decoration: none;
+	 }
+	 .text-muted {
+	   font-size: 1.5em;
+	   color: #777;
+	 }
 	</style>
   </head>
   <body>
