--- a/cpp.html
+++ b/cpp.html
@@ -42,6 +42,10 @@
 	  font-size: 1.5em;
 	  text-align: right;
 	}
+	#main {
+	  width: 100%;
+	  height: 70%;
+	}
 	.main {
 	  width: 80%;
 	  height: 60%;
@@ -67,6 +71,9 @@
 	.object a:visited {
 	  color: black;
 	  text-decoration: none;
+	}
+	#footer {
+	  width: 100%;
 	}
 	.footer {
 		padding-right:15px;
@@ -128,8 +135,9 @@
 		</div>
 	  </div>
 	</section>
+
     <!-- Footer -->
-	<footer>
+	<footer id="footer">
 	  <div class="footer">
 		<div class="footer-center">
 		  <hr>
