각 링크파일 완료

--- a/html.html
+++ b/html.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<title> C++ </title>
+	<title> HTML & CSS </title>
 	<style>
 	html, body {
 	  margin: 0px;
@@ -103,11 +103,11 @@
 	  <div class="header-main">
 		<nav class="nav">
 		  <br><a href="index.html">메인페이지&nbsp;&nbsp;</a>
+		  <a href="cpp.html">C++&nbsp;&nbsp;</a>
 		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
 		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
-		  <a href="html.html">HTML & CSS</a>
 		</nav>
-		<h1><strong>C++</strong></h1>
+		<h1><strong>HTML & CSS</strong></h1>
 	  </div>
 	</header>
 	
@@ -116,22 +116,25 @@
 	  <p>목록</p>
 	  <div class="main">
 		<div class="object">
-		  <a href="cpp1.html">C언어 입문</a>
+		  <a href="css1.html">HTML 이론</a>
 		</div>
 		<div class="object">
-		  <a href="cpp2.html">C언어 기초</a>
+		  <a href="css2.html">HTML 입문</a>
 		</div>
 		<div class="object">
-		  <a href="cpp3.html">C언어 문법1</a>
+		  <a href="css3.html">HTML 기초 태그</a>
 		</div>
 		<div class="object">
-		  <a href="cpp4.html">C언어 문법2</a>
+		  <a href="css4.html">HTML 특수 태그</a>
 		</div>
 		<div class="object">
-		  <a href="cpp5.html">C언어 문법3</a>
+		  <a href="css5.html">CSS 기초</a>
 		</div>
 		<div class="object">
-		  <a href="cpp6.html">C언어 예제</a>
+		  <a href="css6.html">CSS 예제</a>
+		</div>
+		<div class="object">
+		  <a href="css7.html">Javascript 기초</a>
 		</div>
 	  </div>
 	</section>
