--- a/java.html
+++ b/java.html
@@ -103,11 +103,11 @@
 	  <div class="header-main">
 		<nav class="nav">
 		  <br><a href="index.html">메인페이지&nbsp;&nbsp;</a>
+		  <a href="cpp.html">C++&nbsp;&nbsp;</a>
 		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
-		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
 		  <a href="html.html">HTML & CSS</a>
 		</nav>
-		<h1><strong>C++</strong></h1>
+		<h1><strong>Java</strong></h1>
 	  </div>
 	</header>
 	
@@ -116,22 +116,22 @@
 	  <p>목록</p>
 	  <div class="main">
 		<div class="object">
-		  <a href="cpp1.html">C언어 입문</a>
+		  <a href="java1.html">Java 입문</a>
 		</div>
 		<div class="object">
-		  <a href="cpp2.html">C언어 기초</a>
+		  <a href="java2.html">Java 기초</a>
 		</div>
 		<div class="object">
-		  <a href="cpp3.html">C언어 문법1</a>
+		  <a href="java3.html">Java 문법1</a>
 		</div>
 		<div class="object">
-		  <a href="cpp4.html">C언어 문법2</a>
+		  <a href="java4.html">Java 문법2</a>
 		</div>
 		<div class="object">
-		  <a href="cpp5.html">C언어 문법3</a>
+		  <a href="java5.html">Java 문법3</a>
 		</div>
 		<div class="object">
-		  <a href="cpp6.html">C언어 예제</a>
+		  <a href="java6.html">Java 예제</a>
 		</div>
 	  </div>
 	</section>
