--- a/codelink/java.html
+++ b/codelink/java.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<title> HTML & CSS </title>
+	<title> C++ </title>
 	<style>
 	html, body {
 	  margin: 0px;
@@ -102,12 +102,12 @@
 	<header class="header">
 	  <div class="header-main">
 		<nav class="nav">
-		  <br><a href="index.html">메인페이지&nbsp;&nbsp;</a>
+		  <br><a href="../index.html">메인페이지&nbsp;&nbsp;</a>
 		  <a href="cpp.html">C++&nbsp;&nbsp;</a>
 		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
-		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
+		  <a href="html.html">HTML & CSS</a>
 		</nav>
-		<h1><strong>HTML & CSS</strong></h1>
+		<h1><strong>Java</strong></h1>
 	  </div>
 	</header>
 	
@@ -116,25 +116,22 @@
 	  <p>목록</p>
 	  <div class="main">
 		<div class="object">
-		  <a href="css1.html">HTML 이론</a>
+		  <a href="java1.html">Java 입문</a>
 		</div>
 		<div class="object">
-		  <a href="css2.html">HTML 입문</a>
+		  <a href="java2.html">Java 기초</a>
 		</div>
 		<div class="object">
-		  <a href="css3.html">HTML 기초 태그</a>
+		  <a href="java3.html">Java 문법1</a>
 		</div>
 		<div class="object">
-		  <a href="css4.html">HTML 특수 태그</a>
+		  <a href="java4.html">Java 문법2</a>
 		</div>
 		<div class="object">
-		  <a href="css5.html">CSS 기초</a>
+		  <a href="java5.html">Java 문법3</a>
 		</div>
 		<div class="object">
-		  <a href="css6.html">CSS 예제</a>
-		</div>
-		<div class="object">
-		  <a href="css7.html">Javascript 기초</a>
+		  <a href="java6.html">Java 예제</a>
 		</div>
 	  </div>
 	</section>
@@ -155,3 +152,4 @@
     </footer>
   </body>
 </html>
+
