--- a/codelink/ruby.html
+++ b/codelink/ruby.html
@@ -102,12 +102,12 @@
 	<header class="header">
 	  <div class="header-main">
 		<nav class="nav">
-		  <br><a href="index.html">메인페이지&nbsp;&nbsp;</a>
-		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
+		  <br><a href="../index.html">메인페이지&nbsp;&nbsp;</a>
+		  <a href="cpp.html">C++&nbsp;&nbsp;</a>
 		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
 		  <a href="html.html">HTML & CSS</a>
 		</nav>
-		<h1><strong>C++</strong></h1>
+		<h1><strong>Ruby on Rails</strong></h1>
 	  </div>
 	</header>
 	
@@ -116,22 +116,25 @@
 	  <p>목록</p>
 	  <div class="main">
 		<div class="object">
-		  <a href="cpp1.html">C언어 입문</a>
+		  <a href="ruby1.html">RoR 입문</a>
 		</div>
 		<div class="object">
-		  <a href="cpp2.html">C언어 기초</a>
+		  <a href="ruby2.html">RoR 기초</a>
 		</div>
 		<div class="object">
-		  <a href="cpp3.html">C언어 문법1</a>
+		  <a href="ruby3.html">MVC</a>
 		</div>
 		<div class="object">
-		  <a href="cpp4.html">C언어 문법2</a>
+		  <a href="ruby4.html">RoR 문법1</a>
 		</div>
 		<div class="object">
-		  <a href="cpp5.html">C언어 문법3</a>
+		  <a href="ruby5.html">RoR 문법2</a>
 		</div>
 		<div class="object">
-		  <a href="cpp6.html">C언어 예제</a>
+		  <a href="ruby6.html">RoR 예제</a>
+		</div>
+		<div class="object">
+		  <a href="ruby7.html">Ruby Gems</a>
 		</div>
 	  </div>
 	</section>
