--- a/index.html
+++ b/index.html
@@ -262,16 +262,16 @@
 	<p><br>프로그래밍</p>
 	<div class="coding">
 	  <div id="codefirst" class="coding-center">
-		<a href="cpp.html"><img src="public/cpp.png"></a><br><br><h3>C++</h3>
+		<a href="codelink/cpp.html"><img src="public/cpp.png"></a><br><br><h3>C++</h3>
 	  </div>
 	  <div class="coding-center">
-		<a href="ruby.html"><img src="public/ruby.png"></a><br><br><h3>Ruby on Rails</h3>
+		<a href="codelink/ruby.html"><img src="public/ruby.png"></a><br><br><h3>Ruby on Rails</h3>
 	  </div>
 	  <div class="coding-center">
-		<a href="java.html"><img src="public/java.png"></a><br><br><h3>Java</h3>
+		<a href="codelink/java.html"><img src="public/java.png"></a><br><br><h3>Java</h3>
 	  </div>
 	  <div class="coding-center">
-		<a href="html.html"><img src="public/html5.png"></a><br><br><h3>HTML5 & CSS3</h3>
+		<a href="codelink/html.html"><img src="public/html5.png"></a><br><br><h3>HTML5 & CSS3</h3>
 	  </div>
 	</div>
   </section>
@@ -282,13 +282,13 @@
 	<p><br>JLPT 준비<br></p>
 	<div class="jlpt">
 	  <div id="jlptfirst" class="jlpt-center">
-		<a href="alphabet.html"><img src="public/kana.png"></a><br><br><br><h1>가나</h1>
+		<a href="japanese/alphabet.html"><img src="public/kana.png"></a><br><br><br><h1>가나</h1>
 	  </div>
 	  <div class="jlpt-center">
-		<a href="word.html"><img src="public/word.png"></a><br><br><br><h1>단어장</h1>
+		<a href="japanese/word.html"><img src="public/word.png"></a><br><br><br><h1>단어장</h1>
 	  </div>
 	  <div class="jlpt-center">
-		<a href="video.html"><img src="public/video.png"></a><br><br><br><h1>영화</h1>
+		<a href="japanese/video.html"><img src="public/video.png"></a><br><br><br><h1>영화</h1>
 	  </div>
 	  <div class="jlpt-center">
 		<a href="https://www.jlpt.or.kr/index.html"><img src="public/jlpt.png"></a><br><br><br><h1>JLPT 홈페이지</h1>
