--- a/japanese/alphabet.html
+++ b/japanese/alphabet.html
@@ -2,10 +2,123 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<title>alphabet_japanese</title>
+	<title> C++ </title>
+	<style>
+	html, body {
+	  margin: 0px;
+	  width: 100%;
+	  height: 100%;
+	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	}
+	a:link {
+	  color: white;
+	  text-decoration: none;
+	}
+	a:visited {
+	  color: white;
+	  text-decoration: none;
+	}
+	a:hover {
+	  text-decoration: underline;
+	}
+	.header {
+	  margin: 0px;
+	  display: table;
+	  width: 100%;
+	  height: 10%;
+	  background-color: #353535;
+	  background-size: 100%;
+	}
+	.header-main h1 {
+	  color: white;
+	  margin-left: 10%;
+	  font-size: 5em;
+	  vertical-align: middle;
+	}
+	
+	.nav {
+	  margin-top: 0.5em;
+	  margin-right: 2em;
+	  font-size: 1.5em;
+	  text-align: right;
+	}
+	#main {
+	  width: 100%;
+	  height: 70%;
+	}
+	.main {
+	  width: 80%;
+	  height: 60%;
+	  margin-left: 15%;
+	}
+	#main p {
+	  font-size: 3em;
+	  text-align: left;
+	  vertical-align: middle;
+	  margin-left: 10%;
+	}
+
+		
+	#footer {
+	  width: 100%;
+	}
+	.footer {
+		padding-right:15px;
+		padding-left:15px;
+		margin-right: auto;
+		margin-left: auto;
+	 }
+	 .footer-center {
+	   margin: 0 auto;
+	   text-align: center;
+	 }
+	 .footer-center img {
+	   width: 40px;
+	   height: auto;
+	 }
+	 .footer-center a {
+	   text-decoration: none;
+	 }
+	 .text-muted {
+	   font-size: 1.5em;
+	   color: #777;
+	 }
+	</style>
   </head>
   <body>
-	히라가나를 표로 50음도
-	가타카나를 표로 50음도
+	<header class="header">
+	  <div class="header-main">
+		<nav class="nav">
+		  <br><a href="index.html">메인페이지&nbsp;&nbsp;</a>
+		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
+		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
+		  <a href="html.html">HTML & CSS</a>
+		</nav>
+		<h1><strong>C++</strong></h1>
+	  </div>
+	</header>
+	
+	<!-- main section -->
+	<section id="main">
+	  <p>목록</p>
+	  <div class="main">
+
+	  </div>
+	</section>
+
+    <!-- Footer -->
+	<footer id="footer">
+	  <div class="footer">
+		<div class="footer-center">
+		  <hr>
+		  <h2><strong>최규진</strong></h2>(+82) 10-3131-xxxx<br>
+		  <a href="mailto:musiclace@naver.com">musiclace@naver.com</a><br><br><br>
+		  <a href="https://fb.com/96jin"><img src="public/fb.png"></a>
+		  <a href="https://instagram.com/kyujin96"><img src="public/insta.png"></a>
+		  <a href="https://github.com/likelion-wku2831"><img src="public/github.png"></a><br>
+		  <p class="text-muted"> Copyright &copy; My Website 2019</p>
+		</div>
+	  </div>
+    </footer>
   </body>
 </html>
