japanedse folder 틀 완성

--- a/japanese/alphabet.html
+++ b/japanese/alphabet.html
@@ -89,18 +89,18 @@
 	<header class="header">
 	  <div class="header-main">
 		<nav class="nav">
-		  <br><a href="index.html">메인페이지&nbsp;&nbsp;</a>
-		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
-		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
-		  <a href="html.html">HTML & CSS</a>
+		  <br><a href="../index.html">메인페이지&nbsp;&nbsp;</a>
+		  <a href="word.html">단어장&nbsp;&nbsp;</a>
+		  <a href="video.html">영화&nbsp;&nbsp;</a>
+		  <a href="https://www.jlpt.or.kr/index.html">JLPT홈</a>
 		</nav>
-		<h1><strong>C++</strong></h1>
+		<h1><strong>가나</strong></h1>
 	  </div>
 	</header>
 	
 	<!-- main section -->
 	<section id="main">
-	  <p>목록</p>
+	  <p>50음도</p>
 	  <div class="main">
 
 	  </div>
