--- a/japanese/video.html
+++ b/japanese/video.html
@@ -89,12 +89,12 @@
 	<header class="header">
 	  <div class="header-main">
 		<nav class="nav">
-		  <br><a href="index.html">메인페이지&nbsp;&nbsp;</a>
-		  <a href="ruby.html">Ruby on Rails&nbsp;&nbsp;</a>
-		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
-		  <a href="html.html">HTML & CSS</a>
+		  <br><a href="../index.html">메인페이지&nbsp;&nbsp;</a>
+		  <a href="alphabet.html">가나&nbsp;&nbsp;</a>
+		  <a href="word.html">단어장&nbsp;&nbsp;</a>
+		  <a href="https://www.jlpt.or.kr/index.html">JLPT홈</a>
 		</nav>
-		<h1><strong>C++</strong></h1>
+		<h1><strong>영화</strong></h1>
 	  </div>
 	</header>
 	
