--- a/japanese/alphabet.html
+++ b/japanese/alphabet.html
@@ -161,6 +161,43 @@
 			<td>o</td><td>ko</td><td>so</td><td>to</td><td>no</td><td>ho</td><td>mo</td><td>yo</td><td>ro</td><td>wo</td>
 		  </tr>
 		</table>
+		  
+		<table>
+		  <tr>
+			<td class="left" rowspan="11"><strong>히라가나</strong></td>
+			<td class="top" colspan="11"><strong>50음도</strong></td>
+		  </tr>
+		  <tr class="kana">
+			<td>あ</td><td>か</td><td>さ</td><td>た</td><td>な</td><td>は</td><td>ま</td><td>や</td><td>ら</td><td>わ</td><td>ん</td>
+		  </tr>
+		  <tr class="sound">
+			<td>a</td><td>ka</td><td>sa</td><td>ta</td><td>na</td><td>ha</td><td>ma</td><td>ya</td><td>ra</td><td>wa</td><td>n</td>
+		  </tr>
+		  <tr class="kana">
+			<td>い</td><td>き</td><td>き</td><td>ち</td><td>に</td><td>ひ</td><td>み</td><td></td><td>り</td><td rowspan="6"></td><td rowspan="8">&nbsp;</td>
+		  </tr>
+		  <tr class="sound">
+			<td>i</td><td>ki</td><td>si</td><td>chi</td><td>ni</td><td>hi</td><td>mi</td><td></td><td>ri</td>
+		  </tr>
+		  <tr class="kana">
+			<td>う</td><td>く</td><td>す</td><td>つ</td><td>ぬ</td><td>ふ</td><td>む</td><td>ゆ</td><td>る</td>
+		  </tr>
+		  <tr class="sound">
+			<td>u</td><td>ku</td><td>su</td><td>tsu</td><td>nu</td><td>hu</td><td>mu</td><td>yu</td><td>ru</td>
+		  </tr>
+		  <tr class="kana">
+			<td>え</td><td>け</td><td>せ</td><td>ち</td><td>ね</td><td>へ</td><td>め</td><td></td><td>れ</td>
+		  </tr>
+		  <tr class="sound">
+			<td>e</td><td>ke</td><td>se</td><td>te</td><td>ne</td><td>he</td><td>me</td><td></td><td>re</td>
+		  </tr>
+		  <tr class="kana">
+			<td>お</td><td>こ</td><td>そ</td><td>と</td><td>の</td><td>ほ</td><td>も</td><td>よ</td><td>ろ</td><td>を</td>
+		  </tr>
+		  <tr class="sound">
+			<td>o</td><td>ko</td><td>so</td><td>to</td><td>no</td><td>ho</td><td>mo</td><td>yo</td><td>ro</td><td>wo</td>
+		  </tr>
+		</table>
 	  </div>
 	</section>
 
