--- a/japanese/alphabet.html
+++ b/japanese/alphabet.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<title> C++ </title>
+	<title> 50음도 </title>
 	<style>
 	html, body {
 	  margin: 0px;
@@ -46,9 +46,14 @@
 	  width: 100%;
 	  height: 150%;
 	}
-	.main {
+	.hira {
 	  width: 80%;
-	  height: 60%;
+	  height: 45%;
+	  margin-left: 15%;
+	}
+	.kata {
+	  width: 80%;
+	  height: 50%;
 	  margin-left: 15%;
 	}
 	#main p {
@@ -63,10 +68,10 @@
 	}
 
 	table {
-	  border: 1px solid black;
+	  border: 3px solid black;
 	  border-collapse: collapse;
 	  width: 85%;
-	  height: auto;
+	  height: 50%;
 	  text-align: center;
 	  padding: 0px;
 	}
@@ -124,7 +129,7 @@
 	<!-- main section -->
 	<section id="main">
 	  <p>50음도</p>
-	  <div class="main">
+	  <div class="hira">
 		<table>
 		  <tr>
 			<td class="left" rowspan="11"><strong>히라가나</strong></td>
@@ -161,7 +166,8 @@
 			<td>o</td><td>ko</td><td>so</td><td>to</td><td>no</td><td>ho</td><td>mo</td><td>yo</td><td>ro</td><td>wo</td>
 		  </tr>
 		</table>
-		  
+	  </div>
+	  <div class="kata">
 		<table>
 		  <tr>
 			<td class="left" rowspan="11"><strong>히라가나</strong></td>
