--- a/japanese/word.html
+++ b/japanese/word.html
@@ -113,9 +113,9 @@
 		  <hr>
 		  <h2><strong>최규진</strong></h2>(+82) 10-3131-xxxx<br>
 		  <a href="mailto:musiclace@naver.com">musiclace@naver.com</a><br><br><br>
-		  <a href="https://fb.com/96jin"><img src="public/fb.png"></a>
-		  <a href="https://instagram.com/kyujin96"><img src="public/insta.png"></a>
-		  <a href="https://github.com/likelion-wku2831"><img src="public/github.png"></a><br>
+		  <a href="https://fb.com/96jin"><img src="../public/fb.png"></a>
+		  <a href="https://instagram.com/kyujin96"><img src="../public/insta.png"></a>
+		  <a href="https://github.com/likelion-wku2831"><img src="../public/github.png"></a><br>
 		  <p class="text-muted"> Copyright &copy; My Website 2019</p>
 		</div>
 	  </div>
