--- a/japanese/alphabet.html
+++ b/japanese/alphabet.html
@@ -81,11 +81,12 @@
 	}
 	.kana {
 	  font-size: 3em;
-	  height: 10%;
+	  height: 15%;
 	}
 	.sound {
 	  font-size: 1em;
-	  height: 3%;
+	  vertical-align: center;
+	  height: 5%;
 	}
 
 	#footer {
@@ -171,7 +172,7 @@
 	  <div class="kata">
 		<table>
 		  <tr>
-			<td class="left" rowspan="11"><strong>히라가나</strong></td>
+			<td class="left" rowspan="11"><strong>가타카나</strong></td>
 			<td class="top" colspan="11"><strong>50음도</strong></td>
 		  </tr>
 		  <tr class="kana">
